<resources>
    <string name="app_name">SimpleMyDot</string>
    <string name="random_dot">RANDOM DOT</string>
    <string name="clear">CLEAR</string>
    <string-array name="shareble_view">
        <item>Root view</item>
        <item>Dot view</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_dot">Edit Dot</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="size">Size:</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
</resources>
